<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDistanceFragment">

    <TextView
        android:id="@+id/dailyTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/daily_total"/>
    <TextView
        android:id="@+id/dailyTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dailyTotalLabel"
        android:textAlignment="textEnd"
        android:text="@string/daily_total"/>
    <TextView
        android:id="@+id/annualTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailyTotalLabel"
        android:text="@string/annual_total"/>
    <TextView
        android:id="@+id/annualTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/annualTotalLabel"
        android:textAlignment="textEnd"
        android:text="@string/daily_total"/>
    <TextView
        android:id="@+id/mileageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="420dp"
        android:text="@string/km_traveled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mileageAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:width="100dp"
        app:layout_constraintStart_toEndOf="@+id/mileageLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="@string/add"
        app:layout_constraintStart_toEndOf="@+id/mileageAmount"
        app:layout_constraintTop_toTopOf="@+id/mileageAmount" />
</androidx.constraintlayout.widget.ConstraintLayout>