<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/add_distance_nav">

    <fragment
        android:id="@+id/add_distance_nav"
        android:name="com.example.myapplication.AddDistanceFragment"
        android:label="@string/add_distance_label"
        tools:layout="@layout/fragment_add_distance">

        <action
            android:id="@+id/action_add_distance_nav_to_view_distance_nav"
            app:destination="@id/view_distance_nav" />
        <action
            android:id="@+id/action_add_distance_nav_to_settings_nav"
            app:destination="@id/settings_nav" />
        <action
            android:id="@+id/action_add_distance_nav_to_report_distance_nav"
            app:destination="@id/report_distance_nav" />
    </fragment>
    <fragment
        android:id="@+id/view_distance_nav"
        android:name="com.example.myapplication.ViewDistanceFragment"
        android:label="@string/view_distance_label"
        tools:layout="@layout/fragment_view_distance">

        <action
            android:id="@+id/action_view_distance_nav_to_add_distance_nav"
            app:destination="@id/add_distance_nav" />
        <action
            android:id="@+id/action_view_distance_nav_to_settings_nav"
            app:destination="@id/settings_nav" />
        <action
            android:id="@+id/action_view_distance_nav_to_report_distance_nav"
            app:destination="@id/report_distance_nav" />
    </fragment>
    <fragment
        android:id="@+id/report_distance_nav"
        android:name="com.example.myapplication.ReportFragment"
        android:label="@string/report_distance_label"
        tools:layout="@layout/fragment_report">

        <action
            android:id="@+id/action_report_distance_nav_to_add_distance_nav"
            app:destination="@id/add_distance_nav" />
        <action
            android:id="@+id/action_report_distance_nav_to_view_distance_nav"
            app:destination="@id/view_distance_nav" />
    </fragment>
    <fragment
        android:id="@+id/settings_nav"
        android:name="com.example.myapplication.SettingsFragment"
        android:label="@string/settings_label"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_settings_nav_to_view_distance_nav"
            app:destination="@id/view_distance_nav" />
        <action
            android:id="@+id/action_settings_nav_to_add_distance_nav"
            app:destination="@id/add_distance_nav" />
    </fragment>
</navigation>