<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/initial_cost_view"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            >

            <TextView
                android:id="@+id/initial_cost_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/initial_cost" />

            <EditText
                android:id="@+id/initial_cost_text"
                android:layout_width="@dimen/setting_edit_width"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/subsequent_cost_view"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initial_cost_view">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/subsequent_cost_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/subsequent_cost" />

            <EditText
                android:id="@+id/subsequent_cost_text"
                android:layout_width="@dimen/setting_edit_width"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/initial_distance_limit"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subsequent_cost_view">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/initial_cost_breakpoint_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/initial_cost_breakpoint" />

            <EditText
                android:id="@+id/breakpoint_text"
                android:layout_width="@dimen/setting_edit_width"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>